name:                learnparsers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ananduri/parsers#readme
license:             BSD3
license-file:        LICENSE
author:              Arun Nanduri
maintainer:          arun.nanduri@gmail.com
copyright:           2018 Arun Nanduri
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable learnparsers
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , trifecta
                     , parsec
                     , raw-strings-qq
